y.output
   0  $accept : programa $end

   1  programa : declaracao programa
   2           |

   3  declaracao : declara_variavel
   4             | declara_funcao

   5  declara_variavel : TK_IDENTIFIER ':' tipo_variavel literal_numerica ';'
   6                   | TK_IDENTIFIER ':' tipo_variavel '[' LIT_INTEGER ']' inicializacao_vetor ';'

   7  literal_numerica : LIT_INTEGER
   8                   | LIT_REAL
   9                   | LIT_CHAR

  10  inicializacao_vetor : literal_numerica inicializacao_vetor
  11                      |

  12  tipo_variavel : KW_BYTE
  13                | KW_SHORT
  14                | KW_LONG
  15                | KW_FLOAT
  16                | KW_DOUBLE

  17  declara_funcao : tipo_variavel TK_IDENTIFIER '(' lista_parametros ')' comando ';'

  18  lista_parametros : declara_parametro
  19                   | declara_parametro ',' lista_parametros
  20                   |

  21  declara_parametro : tipo_variavel TK_IDENTIFIER

  22  lista_comandos : comando ';'
  23                 | comando ';' lista_comandos
  24                 |

  25  comando : atribuicao
  26          | '{' lista_comandos '}'
  27          | KW_READ TK_IDENTIFIER
  28          | KW_PRINT expressao lista_print
  29          | KW_RETURN expressao
  30          | controle_de_fluxo
  31          |

  32  lista_print : expressao lista_print
  33              |

  34  atribuicao : TK_IDENTIFIER '=' expressao
  35             | TK_IDENTIFIER '#' expressao '=' expressao

  36  operador_binario : '+'
  37                   | '-'
  38                   | '*'
  39                   | '/'
  40                   | '>'
  41                   | '<'
  42                   | OPERATOR_LE
  43                   | OPERATOR_GE
  44                   | OPERATOR_EQ
  45                   | OPERATOR_NE
  46                   | OPERATOR_AND
  47                   | OPERATOR_OR

  48  operador_unario : '!'

  49  expressao : '(' expressao_simples ')'
  50            | '(' operador_unario expressao_simples ')'
  51            | '(' expressao_simples operador_binario expressao_simples ')'
  52            | expressao_simples
  53            | operador_unario expressao_simples
  54            | expressao_simples operador_binario expressao_simples

  55  chama_parametros : expressao
  56                   | expressao ',' chama_parametros
  57                   |

  58  expressao_simples : TK_IDENTIFIER
  59                    | TK_IDENTIFIER '[' expressao ']'
  60                    | TK_IDENTIFIER '(' chama_parametros ')'
  61                    | literal_numerica
  62                    | LIT_STRING

  63  controle_de_fluxo : KW_WHEN '(' expressao ')' KW_THEN comando
  64                    | KW_WHEN '(' expressao ')' KW_THEN comando KW_ELSE comando
  65                    | KW_WHILE '(' expressao ')' comando
  66                    | KW_FOR '(' TK_IDENTIFIER '=' expressao KW_TO expressao ')' comando

state 0
	$accept : . programa $end  (0)
	programa : .  (2)

	KW_BYTE  shift 1
	KW_SHORT  shift 2
	KW_LONG  shift 3
	KW_FLOAT  shift 4
	KW_DOUBLE  shift 5
	TK_IDENTIFIER  shift 6
	$end  reduce 2

	programa  goto 7
	declaracao  goto 8
	declara_variavel  goto 9
	declara_funcao  goto 10
	tipo_variavel  goto 11


state 1
	tipo_variavel : KW_BYTE .  (12)

	.  reduce 12


state 2
	tipo_variavel : KW_SHORT .  (13)

	.  reduce 13


state 3
	tipo_variavel : KW_LONG .  (14)

	.  reduce 14


state 4
	tipo_variavel : KW_FLOAT .  (15)

	.  reduce 15


state 5
	tipo_variavel : KW_DOUBLE .  (16)

	.  reduce 16


state 6
	declara_variavel : TK_IDENTIFIER . ':' tipo_variavel literal_numerica ';'  (5)
	declara_variavel : TK_IDENTIFIER . ':' tipo_variavel '[' LIT_INTEGER ']' inicializacao_vetor ';'  (6)

	':'  shift 12
	.  error


state 7
	$accept : programa . $end  (0)

	$end  accept


state 8
	programa : declaracao . programa  (1)
	programa : .  (2)

	KW_BYTE  shift 1
	KW_SHORT  shift 2
	KW_LONG  shift 3
	KW_FLOAT  shift 4
	KW_DOUBLE  shift 5
	TK_IDENTIFIER  shift 6
	$end  reduce 2

	programa  goto 13
	declaracao  goto 8
	declara_variavel  goto 9
	declara_funcao  goto 10
	tipo_variavel  goto 11


state 9
	declaracao : declara_variavel .  (3)

	.  reduce 3


state 10
	declaracao : declara_funcao .  (4)

	.  reduce 4


state 11
	declara_funcao : tipo_variavel . TK_IDENTIFIER '(' lista_parametros ')' comando ';'  (17)

	TK_IDENTIFIER  shift 14
	.  error


state 12
	declara_variavel : TK_IDENTIFIER ':' . tipo_variavel literal_numerica ';'  (5)
	declara_variavel : TK_IDENTIFIER ':' . tipo_variavel '[' LIT_INTEGER ']' inicializacao_vetor ';'  (6)

	KW_BYTE  shift 1
	KW_SHORT  shift 2
	KW_LONG  shift 3
	KW_FLOAT  shift 4
	KW_DOUBLE  shift 5
	.  error

	tipo_variavel  goto 15


state 13
	programa : declaracao programa .  (1)

	.  reduce 1


state 14
	declara_funcao : tipo_variavel TK_IDENTIFIER . '(' lista_parametros ')' comando ';'  (17)

	'('  shift 16
	.  error


state 15
	declara_variavel : TK_IDENTIFIER ':' tipo_variavel . literal_numerica ';'  (5)
	declara_variavel : TK_IDENTIFIER ':' tipo_variavel . '[' LIT_INTEGER ']' inicializacao_vetor ';'  (6)

	LIT_INTEGER  shift 17
	LIT_REAL  shift 18
	LIT_CHAR  shift 19
	'['  shift 20
	.  error

	literal_numerica  goto 21


state 16
	declara_funcao : tipo_variavel TK_IDENTIFIER '(' . lista_parametros ')' comando ';'  (17)
	lista_parametros : .  (20)

	KW_BYTE  shift 1
	KW_SHORT  shift 2
	KW_LONG  shift 3
	KW_FLOAT  shift 4
	KW_DOUBLE  shift 5
	')'  reduce 20

	tipo_variavel  goto 22
	lista_parametros  goto 23
	declara_parametro  goto 24


state 17
	literal_numerica : LIT_INTEGER .  (7)

	.  reduce 7


state 18
	literal_numerica : LIT_REAL .  (8)

	.  reduce 8


state 19
	literal_numerica : LIT_CHAR .  (9)

	.  reduce 9


state 20
	declara_variavel : TK_IDENTIFIER ':' tipo_variavel '[' . LIT_INTEGER ']' inicializacao_vetor ';'  (6)

	LIT_INTEGER  shift 25
	.  error


state 21
	declara_variavel : TK_IDENTIFIER ':' tipo_variavel literal_numerica . ';'  (5)

	';'  shift 26
	.  error


state 22
	declara_parametro : tipo_variavel . TK_IDENTIFIER  (21)

	TK_IDENTIFIER  shift 27
	.  error


state 23
	declara_funcao : tipo_variavel TK_IDENTIFIER '(' lista_parametros . ')' comando ';'  (17)

	')'  shift 28
	.  error


state 24
	lista_parametros : declara_parametro .  (18)
	lista_parametros : declara_parametro . ',' lista_parametros  (19)

	','  shift 29
	')'  reduce 18


state 25
	declara_variavel : TK_IDENTIFIER ':' tipo_variavel '[' LIT_INTEGER . ']' inicializacao_vetor ';'  (6)

	']'  shift 30
	.  error


state 26
	declara_variavel : TK_IDENTIFIER ':' tipo_variavel literal_numerica ';' .  (5)

	.  reduce 5


state 27
	declara_parametro : tipo_variavel TK_IDENTIFIER .  (21)

	.  reduce 21


state 28
	declara_funcao : tipo_variavel TK_IDENTIFIER '(' lista_parametros ')' . comando ';'  (17)
	comando : .  (31)

	KW_WHEN  shift 31
	KW_WHILE  shift 32
	KW_FOR  shift 33
	KW_READ  shift 34
	KW_RETURN  shift 35
	KW_PRINT  shift 36
	TK_IDENTIFIER  shift 37
	'{'  shift 38
	';'  reduce 31

	comando  goto 39
	atribuicao  goto 40
	controle_de_fluxo  goto 41


state 29
	lista_parametros : declara_parametro ',' . lista_parametros  (19)
	lista_parametros : .  (20)

	KW_BYTE  shift 1
	KW_SHORT  shift 2
	KW_LONG  shift 3
	KW_FLOAT  shift 4
	KW_DOUBLE  shift 5
	')'  reduce 20

	tipo_variavel  goto 22
	lista_parametros  goto 42
	declara_parametro  goto 24


state 30
	declara_variavel : TK_IDENTIFIER ':' tipo_variavel '[' LIT_INTEGER ']' . inicializacao_vetor ';'  (6)
	inicializacao_vetor : .  (11)

	LIT_INTEGER  shift 17
	LIT_REAL  shift 18
	LIT_CHAR  shift 19
	';'  reduce 11

	literal_numerica  goto 43
	inicializacao_vetor  goto 44


state 31
	controle_de_fluxo : KW_WHEN . '(' expressao ')' KW_THEN comando  (63)
	controle_de_fluxo : KW_WHEN . '(' expressao ')' KW_THEN comando KW_ELSE comando  (64)

	'('  shift 45
	.  error


state 32
	controle_de_fluxo : KW_WHILE . '(' expressao ')' comando  (65)

	'('  shift 46
	.  error


state 33
	controle_de_fluxo : KW_FOR . '(' TK_IDENTIFIER '=' expressao KW_TO expressao ')' comando  (66)

	'('  shift 47
	.  error


state 34
	comando : KW_READ . TK_IDENTIFIER  (27)

	TK_IDENTIFIER  shift 48
	.  error


state 35
	comando : KW_RETURN . expressao  (29)

	TK_IDENTIFIER  shift 49
	LIT_INTEGER  shift 17
	LIT_REAL  shift 18
	LIT_CHAR  shift 19
	LIT_STRING  shift 50
	'!'  shift 51
	'('  shift 52
	.  error

	literal_numerica  goto 53
	expressao  goto 54
	operador_unario  goto 55
	expressao_simples  goto 56


state 36
	comando : KW_PRINT . expressao lista_print  (28)

	TK_IDENTIFIER  shift 49
	LIT_INTEGER  shift 17
	LIT_REAL  shift 18
	LIT_CHAR  shift 19
	LIT_STRING  shift 50
	'!'  shift 51
	'('  shift 52
	.  error

	literal_numerica  goto 53
	expressao  goto 57
	operador_unario  goto 55
	expressao_simples  goto 56


state 37
	atribuicao : TK_IDENTIFIER . '=' expressao  (34)
	atribuicao : TK_IDENTIFIER . '#' expressao '=' expressao  (35)

	'='  shift 58
	'#'  shift 59
	.  error


state 38
	comando : '{' . lista_comandos '}'  (26)
	lista_comandos : .  (24)
	comando : .  (31)

	KW_WHEN  shift 31
	KW_WHILE  shift 32
	KW_FOR  shift 33
	KW_READ  shift 34
	KW_RETURN  shift 35
	KW_PRINT  shift 36
	TK_IDENTIFIER  shift 37
	'{'  shift 38
	';'  reduce 31
	'}'  reduce 24

	comando  goto 60
	lista_comandos  goto 61
	atribuicao  goto 40
	controle_de_fluxo  goto 41


state 39
	declara_funcao : tipo_variavel TK_IDENTIFIER '(' lista_parametros ')' comando . ';'  (17)

	';'  shift 62
	.  error


state 40
	comando : atribuicao .  (25)

	.  reduce 25


state 41
	comando : controle_de_fluxo .  (30)

	.  reduce 30


state 42
	lista_parametros : declara_parametro ',' lista_parametros .  (19)

	.  reduce 19


state 43
	inicializacao_vetor : literal_numerica . inicializacao_vetor  (10)
	inicializacao_vetor : .  (11)

	LIT_INTEGER  shift 17
	LIT_REAL  shift 18
	LIT_CHAR  shift 19
	';'  reduce 11

	literal_numerica  goto 43
	inicializacao_vetor  goto 63


state 44
	declara_variavel : TK_IDENTIFIER ':' tipo_variavel '[' LIT_INTEGER ']' inicializacao_vetor . ';'  (6)

	';'  shift 64
	.  error


state 45
	controle_de_fluxo : KW_WHEN '(' . expressao ')' KW_THEN comando  (63)
	controle_de_fluxo : KW_WHEN '(' . expressao ')' KW_THEN comando KW_ELSE comando  (64)

	TK_IDENTIFIER  shift 49
	LIT_INTEGER  shift 17
	LIT_REAL  shift 18
	LIT_CHAR  shift 19
	LIT_STRING  shift 50
	'!'  shift 51
	'('  shift 52
	.  error

	literal_numerica  goto 53
	expressao  goto 65
	operador_unario  goto 55
	expressao_simples  goto 56


state 46
	controle_de_fluxo : KW_WHILE '(' . expressao ')' comando  (65)

	TK_IDENTIFIER  shift 49
	LIT_INTEGER  shift 17
	LIT_REAL  shift 18
	LIT_CHAR  shift 19
	LIT_STRING  shift 50
	'!'  shift 51
	'('  shift 52
	.  error

	literal_numerica  goto 53
	expressao  goto 66
	operador_unario  goto 55
	expressao_simples  goto 56


state 47
	controle_de_fluxo : KW_FOR '(' . TK_IDENTIFIER '=' expressao KW_TO expressao ')' comando  (66)

	TK_IDENTIFIER  shift 67
	.  error


state 48
	comando : KW_READ TK_IDENTIFIER .  (27)

	.  reduce 27


49: shift/reduce conflict (shift 69, reduce 58) on '('
state 49
	expressao_simples : TK_IDENTIFIER .  (58)
	expressao_simples : TK_IDENTIFIER . '[' expressao ']'  (59)
	expressao_simples : TK_IDENTIFIER . '(' chama_parametros ')'  (60)

	'['  shift 68
	'('  shift 69
	KW_ELSE  reduce 58
	KW_TO  reduce 58
	OPERATOR_LE  reduce 58
	OPERATOR_GE  reduce 58
	OPERATOR_EQ  reduce 58
	OPERATOR_NE  reduce 58
	OPERATOR_AND  reduce 58
	OPERATOR_OR  reduce 58
	TK_IDENTIFIER  reduce 58
	LIT_INTEGER  reduce 58
	LIT_REAL  reduce 58
	LIT_CHAR  reduce 58
	LIT_STRING  reduce 58
	'!'  reduce 58
	'+'  reduce 58
	'-'  reduce 58
	'*'  reduce 58
	'/'  reduce 58
	';'  reduce 58
	']'  reduce 58
	')'  reduce 58
	','  reduce 58
	'='  reduce 58
	'>'  reduce 58
	'<'  reduce 58


state 50
	expressao_simples : LIT_STRING .  (62)

	.  reduce 62


state 51
	operador_unario : '!' .  (48)

	.  reduce 48


state 52
	expressao : '(' . expressao_simples ')'  (49)
	expressao : '(' . operador_unario expressao_simples ')'  (50)
	expressao : '(' . expressao_simples operador_binario expressao_simples ')'  (51)

	TK_IDENTIFIER  shift 49
	LIT_INTEGER  shift 17
	LIT_REAL  shift 18
	LIT_CHAR  shift 19
	LIT_STRING  shift 50
	'!'  shift 51
	.  error

	literal_numerica  goto 53
	operador_unario  goto 70
	expressao_simples  goto 71


state 53
	expressao_simples : literal_numerica .  (61)

	.  reduce 61


state 54
	comando : KW_RETURN expressao .  (29)

	.  reduce 29


state 55
	expressao : operador_unario . expressao_simples  (53)

	TK_IDENTIFIER  shift 49
	LIT_INTEGER  shift 17
	LIT_REAL  shift 18
	LIT_CHAR  shift 19
	LIT_STRING  shift 50
	.  error

	literal_numerica  goto 53
	expressao_simples  goto 72


state 56
	expressao : expressao_simples .  (52)
	expressao : expressao_simples . operador_binario expressao_simples  (54)

	OPERATOR_LE  shift 73
	OPERATOR_GE  shift 74
	OPERATOR_EQ  shift 75
	OPERATOR_NE  shift 76
	OPERATOR_AND  shift 77
	OPERATOR_OR  shift 78
	'+'  shift 79
	'-'  shift 80
	'*'  shift 81
	'/'  shift 82
	'>'  shift 83
	'<'  shift 84
	KW_ELSE  reduce 52
	KW_TO  reduce 52
	TK_IDENTIFIER  reduce 52
	LIT_INTEGER  reduce 52
	LIT_REAL  reduce 52
	LIT_CHAR  reduce 52
	LIT_STRING  reduce 52
	'!'  reduce 52
	';'  reduce 52
	']'  reduce 52
	'('  reduce 52
	')'  reduce 52
	','  reduce 52
	'='  reduce 52

	operador_binario  goto 85


state 57
	comando : KW_PRINT expressao . lista_print  (28)
	lista_print : .  (33)

	TK_IDENTIFIER  shift 49
	LIT_INTEGER  shift 17
	LIT_REAL  shift 18
	LIT_CHAR  shift 19
	LIT_STRING  shift 50
	'!'  shift 51
	'('  shift 52
	KW_ELSE  reduce 33
	';'  reduce 33

	literal_numerica  goto 53
	expressao  goto 86
	lista_print  goto 87
	operador_unario  goto 55
	expressao_simples  goto 56


state 58
	atribuicao : TK_IDENTIFIER '=' . expressao  (34)

	TK_IDENTIFIER  shift 49
	LIT_INTEGER  shift 17
	LIT_REAL  shift 18
	LIT_CHAR  shift 19
	LIT_STRING  shift 50
	'!'  shift 51
	'('  shift 52
	.  error

	literal_numerica  goto 53
	expressao  goto 88
	operador_unario  goto 55
	expressao_simples  goto 56


state 59
	atribuicao : TK_IDENTIFIER '#' . expressao '=' expressao  (35)

	TK_IDENTIFIER  shift 49
	LIT_INTEGER  shift 17
	LIT_REAL  shift 18
	LIT_CHAR  shift 19
	LIT_STRING  shift 50
	'!'  shift 51
	'('  shift 52
	.  error

	literal_numerica  goto 53
	expressao  goto 89
	operador_unario  goto 55
	expressao_simples  goto 56


state 60
	lista_comandos : comando . ';'  (22)
	lista_comandos : comando . ';' lista_comandos  (23)

	';'  shift 90
	.  error


state 61
	comando : '{' lista_comandos . '}'  (26)

	'}'  shift 91
	.  error


state 62
	declara_funcao : tipo_variavel TK_IDENTIFIER '(' lista_parametros ')' comando ';' .  (17)

	.  reduce 17


state 63
	inicializacao_vetor : literal_numerica inicializacao_vetor .  (10)

	.  reduce 10


state 64
	declara_variavel : TK_IDENTIFIER ':' tipo_variavel '[' LIT_INTEGER ']' inicializacao_vetor ';' .  (6)

	.  reduce 6


state 65
	controle_de_fluxo : KW_WHEN '(' expressao . ')' KW_THEN comando  (63)
	controle_de_fluxo : KW_WHEN '(' expressao . ')' KW_THEN comando KW_ELSE comando  (64)

	')'  shift 92
	.  error


state 66
	controle_de_fluxo : KW_WHILE '(' expressao . ')' comando  (65)

	')'  shift 93
	.  error


state 67
	controle_de_fluxo : KW_FOR '(' TK_IDENTIFIER . '=' expressao KW_TO expressao ')' comando  (66)

	'='  shift 94
	.  error


state 68
	expressao_simples : TK_IDENTIFIER '[' . expressao ']'  (59)

	TK_IDENTIFIER  shift 49
	LIT_INTEGER  shift 17
	LIT_REAL  shift 18
	LIT_CHAR  shift 19
	LIT_STRING  shift 50
	'!'  shift 51
	'('  shift 52
	.  error

	literal_numerica  goto 53
	expressao  goto 95
	operador_unario  goto 55
	expressao_simples  goto 56


state 69
	expressao_simples : TK_IDENTIFIER '(' . chama_parametros ')'  (60)
	chama_parametros : .  (57)

	TK_IDENTIFIER  shift 49
	LIT_INTEGER  shift 17
	LIT_REAL  shift 18
	LIT_CHAR  shift 19
	LIT_STRING  shift 50
	'!'  shift 51
	'('  shift 52
	')'  reduce 57

	literal_numerica  goto 53
	expressao  goto 96
	operador_unario  goto 55
	expressao_simples  goto 56
	chama_parametros  goto 97


state 70
	expressao : '(' operador_unario . expressao_simples ')'  (50)

	TK_IDENTIFIER  shift 49
	LIT_INTEGER  shift 17
	LIT_REAL  shift 18
	LIT_CHAR  shift 19
	LIT_STRING  shift 50
	.  error

	literal_numerica  goto 53
	expressao_simples  goto 98


state 71
	expressao : '(' expressao_simples . ')'  (49)
	expressao : '(' expressao_simples . operador_binario expressao_simples ')'  (51)

	OPERATOR_LE  shift 73
	OPERATOR_GE  shift 74
	OPERATOR_EQ  shift 75
	OPERATOR_NE  shift 76
	OPERATOR_AND  shift 77
	OPERATOR_OR  shift 78
	'+'  shift 79
	'-'  shift 80
	'*'  shift 81
	'/'  shift 82
	')'  shift 99
	'>'  shift 83
	'<'  shift 84
	.  error

	operador_binario  goto 100


state 72
	expressao : operador_unario expressao_simples .  (53)

	.  reduce 53


state 73
	operador_binario : OPERATOR_LE .  (42)

	.  reduce 42


state 74
	operador_binario : OPERATOR_GE .  (43)

	.  reduce 43


state 75
	operador_binario : OPERATOR_EQ .  (44)

	.  reduce 44


state 76
	operador_binario : OPERATOR_NE .  (45)

	.  reduce 45


state 77
	operador_binario : OPERATOR_AND .  (46)

	.  reduce 46


state 78
	operador_binario : OPERATOR_OR .  (47)

	.  reduce 47


state 79
	operador_binario : '+' .  (36)

	.  reduce 36


state 80
	operador_binario : '-' .  (37)

	.  reduce 37


state 81
	operador_binario : '*' .  (38)

	.  reduce 38


state 82
	operador_binario : '/' .  (39)

	.  reduce 39


state 83
	operador_binario : '>' .  (40)

	.  reduce 40


state 84
	operador_binario : '<' .  (41)

	.  reduce 41


state 85
	expressao : expressao_simples operador_binario . expressao_simples  (54)

	TK_IDENTIFIER  shift 49
	LIT_INTEGER  shift 17
	LIT_REAL  shift 18
	LIT_CHAR  shift 19
	LIT_STRING  shift 50
	.  error

	literal_numerica  goto 53
	expressao_simples  goto 101


state 86
	lista_print : expressao . lista_print  (32)
	lista_print : .  (33)

	TK_IDENTIFIER  shift 49
	LIT_INTEGER  shift 17
	LIT_REAL  shift 18
	LIT_CHAR  shift 19
	LIT_STRING  shift 50
	'!'  shift 51
	'('  shift 52
	KW_ELSE  reduce 33
	';'  reduce 33

	literal_numerica  goto 53
	expressao  goto 86
	lista_print  goto 102
	operador_unario  goto 55
	expressao_simples  goto 56


state 87
	comando : KW_PRINT expressao lista_print .  (28)

	.  reduce 28


state 88
	atribuicao : TK_IDENTIFIER '=' expressao .  (34)

	.  reduce 34


state 89
	atribuicao : TK_IDENTIFIER '#' expressao . '=' expressao  (35)

	'='  shift 103
	.  error


90: reduce/reduce conflict (reduce 22, reduce 24) on '}'
state 90
	lista_comandos : comando ';' .  (22)
	lista_comandos : comando ';' . lista_comandos  (23)
	lista_comandos : .  (24)
	comando : .  (31)

	KW_WHEN  shift 31
	KW_WHILE  shift 32
	KW_FOR  shift 33
	KW_READ  shift 34
	KW_RETURN  shift 35
	KW_PRINT  shift 36
	TK_IDENTIFIER  shift 37
	'{'  shift 38
	';'  reduce 31
	'}'  reduce 22

	comando  goto 60
	lista_comandos  goto 104
	atribuicao  goto 40
	controle_de_fluxo  goto 41


state 91
	comando : '{' lista_comandos '}' .  (26)

	.  reduce 26


state 92
	controle_de_fluxo : KW_WHEN '(' expressao ')' . KW_THEN comando  (63)
	controle_de_fluxo : KW_WHEN '(' expressao ')' . KW_THEN comando KW_ELSE comando  (64)

	KW_THEN  shift 105
	.  error


state 93
	controle_de_fluxo : KW_WHILE '(' expressao ')' . comando  (65)
	comando : .  (31)

	KW_WHEN  shift 31
	KW_WHILE  shift 32
	KW_FOR  shift 33
	KW_READ  shift 34
	KW_RETURN  shift 35
	KW_PRINT  shift 36
	TK_IDENTIFIER  shift 37
	'{'  shift 38
	KW_ELSE  reduce 31
	';'  reduce 31

	comando  goto 106
	atribuicao  goto 40
	controle_de_fluxo  goto 41


state 94
	controle_de_fluxo : KW_FOR '(' TK_IDENTIFIER '=' . expressao KW_TO expressao ')' comando  (66)

	TK_IDENTIFIER  shift 49
	LIT_INTEGER  shift 17
	LIT_REAL  shift 18
	LIT_CHAR  shift 19
	LIT_STRING  shift 50
	'!'  shift 51
	'('  shift 52
	.  error

	literal_numerica  goto 53
	expressao  goto 107
	operador_unario  goto 55
	expressao_simples  goto 56


state 95
	expressao_simples : TK_IDENTIFIER '[' expressao . ']'  (59)

	']'  shift 108
	.  error


state 96
	chama_parametros : expressao .  (55)
	chama_parametros : expressao . ',' chama_parametros  (56)

	','  shift 109
	')'  reduce 55


state 97
	expressao_simples : TK_IDENTIFIER '(' chama_parametros . ')'  (60)

	')'  shift 110
	.  error


state 98
	expressao : '(' operador_unario expressao_simples . ')'  (50)

	')'  shift 111
	.  error


state 99
	expressao : '(' expressao_simples ')' .  (49)

	.  reduce 49


state 100
	expressao : '(' expressao_simples operador_binario . expressao_simples ')'  (51)

	TK_IDENTIFIER  shift 49
	LIT_INTEGER  shift 17
	LIT_REAL  shift 18
	LIT_CHAR  shift 19
	LIT_STRING  shift 50
	.  error

	literal_numerica  goto 53
	expressao_simples  goto 112


state 101
	expressao : expressao_simples operador_binario expressao_simples .  (54)

	.  reduce 54


state 102
	lista_print : expressao lista_print .  (32)

	.  reduce 32


state 103
	atribuicao : TK_IDENTIFIER '#' expressao '=' . expressao  (35)

	TK_IDENTIFIER  shift 49
	LIT_INTEGER  shift 17
	LIT_REAL  shift 18
	LIT_CHAR  shift 19
	LIT_STRING  shift 50
	'!'  shift 51
	'('  shift 52
	.  error

	literal_numerica  goto 53
	expressao  goto 113
	operador_unario  goto 55
	expressao_simples  goto 56


state 104
	lista_comandos : comando ';' lista_comandos .  (23)

	.  reduce 23


state 105
	controle_de_fluxo : KW_WHEN '(' expressao ')' KW_THEN . comando  (63)
	controle_de_fluxo : KW_WHEN '(' expressao ')' KW_THEN . comando KW_ELSE comando  (64)
	comando : .  (31)

	KW_WHEN  shift 31
	KW_WHILE  shift 32
	KW_FOR  shift 33
	KW_READ  shift 34
	KW_RETURN  shift 35
	KW_PRINT  shift 36
	TK_IDENTIFIER  shift 37
	'{'  shift 38
	KW_ELSE  reduce 31
	';'  reduce 31

	comando  goto 114
	atribuicao  goto 40
	controle_de_fluxo  goto 41


state 106
	controle_de_fluxo : KW_WHILE '(' expressao ')' comando .  (65)

	.  reduce 65


state 107
	controle_de_fluxo : KW_FOR '(' TK_IDENTIFIER '=' expressao . KW_TO expressao ')' comando  (66)

	KW_TO  shift 115
	.  error


state 108
	expressao_simples : TK_IDENTIFIER '[' expressao ']' .  (59)

	.  reduce 59


state 109
	chama_parametros : expressao ',' . chama_parametros  (56)
	chama_parametros : .  (57)

	TK_IDENTIFIER  shift 49
	LIT_INTEGER  shift 17
	LIT_REAL  shift 18
	LIT_CHAR  shift 19
	LIT_STRING  shift 50
	'!'  shift 51
	'('  shift 52
	')'  reduce 57

	literal_numerica  goto 53
	expressao  goto 96
	operador_unario  goto 55
	expressao_simples  goto 56
	chama_parametros  goto 116


state 110
	expressao_simples : TK_IDENTIFIER '(' chama_parametros ')' .  (60)

	.  reduce 60


state 111
	expressao : '(' operador_unario expressao_simples ')' .  (50)

	.  reduce 50


state 112
	expressao : '(' expressao_simples operador_binario expressao_simples . ')'  (51)

	')'  shift 117
	.  error


state 113
	atribuicao : TK_IDENTIFIER '#' expressao '=' expressao .  (35)

	.  reduce 35


114: shift/reduce conflict (shift 118, reduce 63) on KW_ELSE
state 114
	controle_de_fluxo : KW_WHEN '(' expressao ')' KW_THEN comando .  (63)
	controle_de_fluxo : KW_WHEN '(' expressao ')' KW_THEN comando . KW_ELSE comando  (64)

	KW_ELSE  shift 118
	';'  reduce 63


state 115
	controle_de_fluxo : KW_FOR '(' TK_IDENTIFIER '=' expressao KW_TO . expressao ')' comando  (66)

	TK_IDENTIFIER  shift 49
	LIT_INTEGER  shift 17
	LIT_REAL  shift 18
	LIT_CHAR  shift 19
	LIT_STRING  shift 50
	'!'  shift 51
	'('  shift 52
	.  error

	literal_numerica  goto 53
	expressao  goto 119
	operador_unario  goto 55
	expressao_simples  goto 56


state 116
	chama_parametros : expressao ',' chama_parametros .  (56)

	.  reduce 56


state 117
	expressao : '(' expressao_simples operador_binario expressao_simples ')' .  (51)

	.  reduce 51


state 118
	controle_de_fluxo : KW_WHEN '(' expressao ')' KW_THEN comando KW_ELSE . comando  (64)
	comando : .  (31)

	KW_WHEN  shift 31
	KW_WHILE  shift 32
	KW_FOR  shift 33
	KW_READ  shift 34
	KW_RETURN  shift 35
	KW_PRINT  shift 36
	TK_IDENTIFIER  shift 37
	'{'  shift 38
	KW_ELSE  reduce 31
	';'  reduce 31

	comando  goto 120
	atribuicao  goto 40
	controle_de_fluxo  goto 41


state 119
	controle_de_fluxo : KW_FOR '(' TK_IDENTIFIER '=' expressao KW_TO expressao . ')' comando  (66)

	')'  shift 121
	.  error


state 120
	controle_de_fluxo : KW_WHEN '(' expressao ')' KW_THEN comando KW_ELSE comando .  (64)

	.  reduce 64


state 121
	controle_de_fluxo : KW_FOR '(' TK_IDENTIFIER '=' expressao KW_TO expressao ')' . comando  (66)
	comando : .  (31)

	KW_WHEN  shift 31
	KW_WHILE  shift 32
	KW_FOR  shift 33
	KW_READ  shift 34
	KW_RETURN  shift 35
	KW_PRINT  shift 36
	TK_IDENTIFIER  shift 37
	'{'  shift 38
	KW_ELSE  reduce 31
	';'  reduce 31

	comando  goto 122
	atribuicao  goto 40
	controle_de_fluxo  goto 41


state 122
	controle_de_fluxo : KW_FOR '(' TK_IDENTIFIER '=' expressao KW_TO expressao ')' comando .  (66)

	.  reduce 66


State 49 contains 1 shift/reduce conflict.
State 90 contains 1 reduce/reduce conflict.
State 114 contains 1 shift/reduce conflict.


47 terminals, 20 nonterminals
67 grammar rules, 123 states
